--- a/ProyectoNotas/nbproject/project.properties
+++ b/ProyectoNotas/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoNotas
+application.vendor=Sebas
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/ProyectoNotas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoNotas
+endorsed.classpath=
 excludes=
 file.reference.jcommon-1.0.23.jar=/Users/andresbaezrincon/Desktop/UMNG/Tercer Semestre/Programaci\u00f3n III/jfreechart-1.0.19/lib/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19-experimental.jar=/Users/andresbaezrincon/Desktop/UMNG/Tercer Semestre/Programaci\u00f3n III/jfreechart-1.0.19/lib/jfreechart-1.0.19-experimental.jar
@@ -52,8 +54,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=13
-javac.target=13
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
