--- a/EjemploTabla/nbproject/project.properties
+++ b/EjemploTabla/nbproject/project.properties
@@ -33,9 +33,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EjemploTabla
 excludes=
+file.reference.jcommon-1.0.23.jar=/Users/andresbaezrincon/Desktop/UMNG/Tercer Semestre/Programaci\u00f3n III/jfreechart-1.0.19/lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-experimental.jar=/Users/andresbaezrincon/Desktop/UMNG/Tercer Semestre/Programaci\u00f3n III/jfreechart-1.0.19/lib/jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=/Users/andresbaezrincon/Desktop/UMNG/Tercer Semestre/Programaci\u00f3n III/jfreechart-1.0.19/lib/jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=/Users/andresbaezrincon/Desktop/UMNG/Tercer Semestre/Programaci\u00f3n III/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +79,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=EjemploTabla
-main.class=ejemplotabla.EjemploTabla
+main.class=ejemplotabla.Archivo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
